deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-asp-boilerplate-web-deployment
  labels:
    app: react-asp-boilerplate
spec:
  selector:
    matchLabels:
      app: react-asp-boilerplate-web
  replicas: 1
  template:
    metadata:
      labels:
        app: react-asp-boilerplate-web
    spec:
      containers:
        - name: react-asp-boilerplate-web
          image: registry.codegarage.ru/codegarage/react-asp-boilerplate/react-asp-boilerplate-web
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: registry-credentials
